fix spacing

--- a/slices/web/assets/stylesheets/app.scss
+++ b/slices/web/assets/stylesheets/app.scss
@@ -65,7 +65,7 @@ a.text-gray:hover {
   border-radius: 20px;
 }
 
-footer {
+.sponsor {
   margin-top: auto;
 }
 
